Change: minor changes, bug fixes
- change record amount type from Long to Double